docs/v0.2.0a186/_sources/reference/_autosummary/hpcflow.sdk.core.loop.WorkflowLoop.rst.txt
hpcflow.sdk.core.loop.WorkflowLoop
==================================

.. currentmodule:: hpcflow.sdk.core.loop

.. autoclass:: WorkflowLoop
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~WorkflowLoop.add_iteration
      ~WorkflowLoop.get_child_loops
      ~WorkflowLoop.get_parent_loops
      ~WorkflowLoop.new_empty_loop
      ~WorkflowLoop.test_termination
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~WorkflowLoop.downstream_tasks
      ~WorkflowLoop.index
      ~WorkflowLoop.iterable_parameters
      ~WorkflowLoop.name
      ~WorkflowLoop.num_added_iterations
      ~WorkflowLoop.num_iterations
      ~WorkflowLoop.parents
      ~WorkflowLoop.task_indices
      ~WorkflowLoop.task_insert_IDs
      ~WorkflowLoop.task_objects
      ~WorkflowLoop.template
      ~WorkflowLoop.upstream_tasks
      ~WorkflowLoop.workflow
   
   